# abbacchio

./: .env.example  .gitignore  CLAUDE.md  README.md  SECURITY.md  centrifugo.env.example  centrifugo.json  centrifugo.prod.json  docker-compose.prod.yml  docker-compose.yml  llms.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
.claude/: settings.local.json
.claude/commands/: bump-version.md  commit-by-package.md
.github/workflows/: README.md  ci.yml  create-release-tag.yml  npm-publish.yml  publish-packages.yml  pypi-publish.yml  release.yml
dashboard/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
dashboard/src/: App.tsx  index.css  types.ts
docs/: api.md  channels.md  claude-code.md  configuration.md  dashboard.md  desktop.md  development.md  encryption.md  transports.md  tui.md
docs/deployment/: centrifugo-production.md
python/: .gitignore  README.md  pyproject.toml
python/abbacchio/: __init__.py  logging.py  loguru.py  structlog.py  transport.py
python/abbacchio_transport/: __init__.py  logging.py  loguru.py  structlog.py  transport.py
python/examples/: example_logging.py  example_loguru.py  example_structlog.py
python/tests/: test_logging.py  test_transport.py
scripts/: README.md  bump-version.js  insert-test-logs-pinio.ts  insert-test-logs-pino.ts  insert-test-logs.ts
scripts/browser/: README.md  abbacchio-console.js  console-inject.html  index.html
scripts/js/: README.md  insert-test-logs-bunyan.ts  insert-test-logs-pino.ts  insert-test-logs-winston.ts  test-npm-package-bunyan.ts  (+4 more)
src/: server.ts  transport.ts  types.ts
tests/: setup.ts
(+22 files in other folders)
